--- a/Module.html
+++ b/Module.html
@@ -19,7 +19,7 @@
    
  background-color: #00FF00;
   
-  background-image: linear-gradient(45deg, #fefbd8 0%, #79C557 37%, #632379 85%);
+  background-image: linear-gradient(45deg, #9CA3DB 0%, #677DB7 37%, #454B66 85%);
  
    /*background-image: url('img/bg.jpg');
    
