--- a/Module.html
+++ b/Module.html
@@ -81,7 +81,7 @@
 
 
  <h2><b>III. Module and Unit Topics</b></h2>
- 
+ <br>
 <p font size="13">
  This course has the following modules based on the prototype syllabus given in
 CMO 25, s. 2015.
@@ -89,23 +89,13 @@ CMO 25, s. 2015.
 <ul type="none">
   
 <li><b>Module 1: OVERVIEW OF EMERGING TECHNOLOGIES.</b>
- This module aims to
-introduce to you the concept of applications development and emerging
-technologies, how they developed and how it is differentiated with existing and
-developing technologies. It also covers the potential applications of these ET
-along education, business, health and society. Moreover, Industry 4.0 and
-smart factory are likewise introduced in this module.</li>
+<br>
+ This module aims to introduce to you the concept of applications development and emerging technologies, how they developed and how it is differentiated with existing and developing technologies. It also covers the potential applications of these ET along education, business, health and society. Moreover, Industry 4.0 and smart factory are likewise introduced in this module.</li>
 
 <br>
-
 <li><b>Module 2: REQUIREMENTS ANALYSIS AND MODELING.</b>
- This module aims to
-deepen your understanding about requirements analysis and modeling. The
-knowledge area is concerned with the acquisition, analysis, specification,
-validation and modeling of software requirements. It presents the major
-categories of software requirements, techniques of gathering requirements,
-the characteristics of good requirements, and modeling user -defined
-requirements.</li>
+<br>
+ This module aims to deepen your understanding about requirements analysis and modeling. The knowledge area is concerned with the acquisition, analysis, specification, validation and modeling of software requirements. It presents the major categories of software requirements, techniques of gathering requirements, the characteristics of good requirements, and modeling user -defined requirements.</li>
 
 <br>
 
